--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,17 @@
 	</properties>
 
 	<dependencies>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.14.3</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.typesafe/config -->
@@ -120,4 +127,7 @@
 		</dependency>
 
 	</dependencies>
+	
+		
 </project>
+
